--- a/.github/workflows/test-contracts.yml
+++ b/.github/workflows/test-contracts.yml
@@ -29,10 +29,9 @@ jobs:
           do
             echo $file
             if [[ $file != contracts/* && $file != test/* ]]; then
-              echo "This modified file is not under the 'contracts' or 'test' folder."
               echo "::set-output name=run_job::false"
             else
-              echo "Found modified file under the 'contracts' or 'test' folder."
+              echo "Found modified file under the 'contracts' or 'test' folder. Run contract unit tests."
               echo "::set-output name=run_job::true"
               break
             fi
@@ -47,6 +46,6 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
-      - run: npm ci
-      - run: npm test
-
+      - run: rm -rf node_modules
+      - run: yarn install --frozen-lockfile
+      - run: yarn test
