--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@chainsafe/truffle-plugin-abigen": "^0.0.2",
     "@openzeppelin/test-helpers": "^0.5.10",
+    "@poanet/solidity-flattener": "^3.0.6",
     "chai": "^4.3.0",
     "chai-as-promised": "^7.1.1",
     "ganache-cli": "^6.12.2",
