docker - fix config

--- a/docker/assets/config.json
+++ b/docker/assets/config.json
@@ -1,6 +1,6 @@
 {
   "contract_address": "0xCfEB869F69431e42cdB54A4F4f105C19C080A601",
-  "blockhash_store_Address": "0x5b1869D9A4C187F2EAa108f3062412ecf0526b24",
+  "blockhash_store_address": "0x5b1869D9A4C187F2EAa108f3062412ecf0526b24",
   "eth_http_host": "http://127.0.0.1:8545",
   "eth_ws_host": "http://127.0.0.1:8545",
   "network_id": 696969,
