configs and prerequisites for polygon deployment

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "docs:api:postclean": "rimraf docs/api/Migrations.md && rimraf docs/api/interfaces && rimraf docs/api/vendor",
     "docs:api:build": "yarn run docs:api:clean && solidity-docgen -t ./docs/templates -o ./docs/api -e contracts/mocks,contracts/examples && yarn run docs:api:postclean",
     "docs:compile": "rimraf docs/.vuepress/dist && yarn run docs:api:build && vuepress build docs",
-    "docs:dev": "vuepress dev docs"
+    "docs:dev": "vuepress dev docs",
+    "flatten": "node scripts/flatten_contracts.js"
   },
   "repository": {
     "type": "git",
@@ -38,7 +39,8 @@
     "solidity-docgen": "^0.5.11",
     "truffle": "^5.2.1",
     "truffle-plugin-verify": "^0.5.7",
-    "vuepress": "^1.8.2"
+    "vuepress": "^1.8.2",
+    "truffle-flattener": "^1.5.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.4.0",
